# 2025-data-release-cell-syntax-experiment

./: .gitignore  1_data-integrity-events.ipynb  2_preparation.ipynb  3_data-integrity-variables.ipynb  4_analysis.ipynb  README.md  pipeline.jv  pyproject.toml  util.py
data/: participants.csv  results_anon.csv  results_anon_only_outliers.csv  results_anon_without_outliers.csv
experiment/: README.md
experiment/controlled-experiment-tool-4.0.0/: README.md  prettier.config.js
experiment/controlled-experiment-tool-4.0.0/client-web/src/: App.tsx  events.ts
experiment/controlled-experiment-tool-4.0.0/client-web/src/components/: HighlightedTable.tsx  SyntaxTaskRead.tsx  SyntaxTaskWrite.tsx  UnderstandingTask.tsx
experiment/controlled-experiment-tool-4.0.0/client-web/src/pages/: ConsentPage.tsx  EndPage.tsx  ExperimentMetadataInputPage.tsx  PipelineUnderstandingPage.tsx  PreparationPage.tsx  SyntaxConsentPage.tsx  SyntaxEndPage.tsx  SyntaxPreparationPage.tsx  TaskPage.tsx
experiment/controlled-experiment-tool-4.0.0/client-web/src/tasks/: config.ts  configSyntax.ts
experiment/tasks/: pipeline.jv  syntax-data1.csv  syntax-data2.csv
