[project]
name = "2025-data-release-cell-syntax-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "limepy>=0.1.14",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "seaborn>=0.13.2",
]
